switch to servlet 3.1 - jsp 2.3: switch from tomcat 7 to tomcat 8.5